--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ add_library(utilslib
         utils/logger.cpp utils/logger.hpp
         utils/socket_wrapper.cpp utils/socket_wrapper.hpp)
 
-add_executable(client client.cpp client.hpp)
+add_executable(client client.cpp client.cpp)
 add_executable(server server.cpp server.hpp)
 target_link_libraries(client utilslib)
 target_link_libraries(server utilslib)
