--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_GLIBCXX_DEBUG -fsanitize=address,undefined")
 set(CMAKE_CXX_FLAGS_RELEASE "-O2")
 
-add_library(utils STATIC utils.cpp)
+add_library(utils STATIC utils.cpp fd_wrapper.h)
 
 add_executable(server server.cpp)
 add_executable(client client.cpp)
