adds accumulator for reading responces and retries on sending

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,5 +14,8 @@ set_target_properties(server-lib PROPERTIES LINKER_LANGUAGE CXX)
 add_library(client-lib STATIC client/client.h client/client.cpp)
 set_target_properties(client-lib PROPERTIES LINKER_LANGUAGE CXX)
 
-target_link_libraries(server server-lib)
-target_link_libraries(client client-lib)
+add_library(common STATIC utils/utils.h utils/utils.cpp)
+set_target_properties(common PROPERTIES LINKER_LANGUAGE CXX)
+
+target_link_libraries(server server-lib common)
+target_link_libraries(client client-lib common)
